# postgres

./: meson.build  phash.c  phash.h
contrib/alloc_bench/: Makefile  alloc_bench--1.0.sql  alloc_bench.c  alloc_bench.control
contrib/amcheck/: verify_heapam.c
contrib/auto_explain/: auto_explain.c
contrib/dblink/: dblink.c
contrib/file_fdw/: file_fdw.c
contrib/hstore/: hstore_io.c
contrib/pageinspect/: brinfuncs.c  gistfuncs.c  heapfuncs.c
contrib/pg_buffercache/: pg_buffercache_pages.c
contrib/pg_trgm/: trgm_op.c
contrib/pg_visibility/: pg_visibility.c
contrib/postgres_fdw/: deparse.c  postgres_fdw.c
contrib/postgres_fdw/expected/: postgres_fdw.out
contrib/slab_bench/: Makefile  bench.sql  slab_bench--1.0.sql  slab_bench.c  slab_bench.control
contrib/test_decoding/: test_decoding.c
doc/src/sgml/: auto-explain.sgml  catalogs.sgml  config.sgml  func.sgml  perform.sgml  stylesheet.css  system-views.sgml  xaggr.sgml
src/backend/backup/: basebackup_copy.c
src/backend/bootstrap/: bootstrap.c
src/backend/catalog/: genbki.pl  heap.c  index.c  indexing.c  information_schema.sql  objectaddress.c  pg_aggregate.c  pg_attrdef.c  pg_publication.c  toasting.c
src/backend/commands/: aggregatecmds.c  analyze.c  copy.c  copyfrom.c  copyto.c  (+17 more)
src/common/: kwlookup.c  string.c  stringinfo.c
src/fe_utils/: string_utils.c
src/include/: Makefile  c.h  fmgr.h  pgstat.h
src/test/modules/deform_bench/: Makefile  deform_bench--1.0.sql  deform_bench.c  deform_bench.control  meson.build
src/timezone/: pgtz.c
src/tools/: PerfectHash.pm  gen_keywordlist.pl
(+337 files in other folders)
